log
Sat, Apr 19, 2025  3:23:33 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1.exe: all warnings being treated as errors
eeef3b7
Sat, Apr 19, 2025  3:26:10 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1.exe: all warnings being treated as errors
19cc32a
Sat, Apr 19, 2025  3:32:48 PM: 
Compilation failed
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: warning: 'sprintf' argument 3 overlaps destination object 'msg' [-Wrestrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: warning: 'sprintf' argument 3 overlaps destination object 'msg' [-Wrestrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: warning: 'sprintf' argument 3 overlaps destination object 'msg' [-Wrestrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
gcc.exe: error: -E or -x required when input is from standard input
b903d4c
Sat, Apr 19, 2025  3:33:50 PM: 
Compilation failed
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:442:9: warning: 'sprintf' argument 3 overlaps destination object 'msg' [-Wrestrict]
  442 |         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:439:18: warning: 'sprintf' argument 3 overlaps destination object 'msg' [-Wrestrict]
  439 |             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:438:39: warning: 'sprintf' argument 3 overlaps destination object 'msg' [-Wrestrict]
  438 |             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
gcc.exe: error: -E or -x required when input is from standard input
0cfec70
